solc_ossfuzz_seed_corpus/test_sol/test_4928cfedf921edadda8dc12a42726eb9cbfdc6cc9fb56b7abaae37055cdbded8_b7e182767d9642edbc0b519eaccff4e0d68c12d8_sol.sol
==== Source:  ====

==== Source: su0.sol ====
library L0 {
  function f0(address payable i0) internal   
  {
  }
  using L0 for *;
  function f1(function (int128, address payable, uint16) external   returns (function () external   returns (int16), function (address payable, address payable, int56[] memory) internal   returns (function (bytes22) external  , bytes5), bytes5) i0,address i1) internal   
  {
  }
  bytes3 public constant cons0 = bytes3(0xffffff);
  type T0 is address payable;
  modifier m0(function () external   returns (uint168, int56, address payable) i0) 
  {
    f0(payable(address(0x0000000000000000000000000000000000000003)));
    if ((false || true))
    {
      _;
    }
    else if (false)
    {
      f0(payable(address(0x0000000000000000000000000000000000000006)));
      try i0() returns (uint168 l0, int56 l1, address payable l2)
      {
      }
      catch
      {
        _;
      }
      catch Error(string memory l3)
      {
      }
    }
    else if ((false && true))
    {
    }
  }
  function f2(address i0) private    returns(address payable o0,bytes22 o1)
  {
  }
  event ev0();
  event ev1(bytes1 indexed ep0);
  function f3() internal   
  {
  }
}
using L0 for uint;
using L0 for uint;
struct St0 {
  uint8 el0;
}
contract C0 {
  using L0 for *;
  uint192  public s0;
  mapping(int32 => int192[2])   s1;
  address   s2;
  constructor(uint192 i0,address i1)   {
    s0 ^= ((((((uint192(0) % uint192(4758940808256018492677099176118277521598587370433012454753)) - uint192(6277101735386680763835789423207666416102355444464034512895)) << uint120(uint120(776693615889531084055244324234183325))) << uint40(uint40(0))) % uint192(0)) + uint192(0));
    s2 = address(this);
    unchecked {
      (bool l0, bytes memory l1) = address(this).call(bytes("adeb3a97e26b7881924e543b843938aed6b8bb501f4b291f99ffffffffffffffffffffffffffffffffffffffffffffffffff"));
    }
  }
  fallback() external   
  {
  }
  using L0 for *;
  event ev2(uint248  ep0, bytes5  ep1);
  using L0 for *;
}
pragma solidity >= 0.0.0;
error er0();
using L0 for uint;

==== Source: su1.sol ====
function f5(function (uint240, bool) external   returns (int32[] memory, bool) i0,bool i1)     returns(uint200 o0,int24 o1,int128 o2)
{
}
library L1 {
  function f6(bool i0,bool i1) public   
  {
  }
  event ev3(function (uint24, uint176, bool) external   returns (bytes memory, address)  ep0);
  modifier m1(bool i0) 
  {
    _;
  }
  enum EN0 {
    M0, M1, M2, M3, M4, M5, M6, M7,
    M8, M9, M10, M11, M12, M13, M14, M15,
    M16, M17, M18, M19, M20, M21, M22, M23,
    M24, M25, M26, M27, M28, M29, M30, M31,
    M32, M33, M34, M35, M36, M37, M38, M39,
    M40, M41, M42, M43, M44, M45, M46, M47,
    M48, M49, M50, M51, M52, M53, M54, M55,
    M56, M57, M58, M59, M60, M61, M62, M63,
    M64, M65
  }
}
using L1 for uint;
using L1 for uint;
using L1 for uint;
pragma solidity >= 0.0.0;
// ----
// TypeError 2582: (su0.sol:202-321): Internal type cannot be used for external function type.
